# ai-pitch-coach

./: .env.example  README.md  main.py  pyproject.toml
static/: script.js  style.css
templates/: index.html
