[tool.poetry]
name = "ai-pitch-pitch"
version = "0.1.0"
description = "AI Pitch Coach is a web-based assistant designed to help the founders and entrepreneurs craft, refine, and deliver compelling startup pitches for investors, customers, or partners."
authors = ["Nazgul Mamasheva"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"
crewai = "^1.8.0"
pydantic = "^2.11.10"
openai = "^1.83.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
python-multipart = "^0.0.21"
langchain-core = "0.3.81"
langchain-openai = "0.3.23"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"